[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/UI.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_boss"]
bg_color = Color(0.8, 0, 0.2, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="UI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_script")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PausePanel" type="Panel" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Control/PausePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Title" type="Label" parent="Control/PausePanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "PAUSED"
horizontal_alignment = 1

[node name="ResumeBtn" type="Button" parent="Control/PausePanel/VBox"]
layout_mode = 2
text = "RESUME"

[node name="MenuBtn" type="Button" parent="Control/PausePanel/VBox"]
layout_mode = 2
text = "BACK TO MENU"

[node name="TopBar" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2
alignment = 1
theme_override_constants/separation = 50

[node name="ScoreLabel" type="Label" parent="Control/TopBar"]
layout_mode = 2
text = "SCORE: 0"

[node name="LivesLabel" type="Label" parent="Control/TopBar"]
layout_mode = 2
text = "LIVES: 3"

[node name="WaveLabel" type="Label" parent="Control/TopBar"]
layout_mode = 2
text = "WAVE: 1"

[node name="BossHealth" type="VBoxContainer" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 60.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2

[node name="Label" type="Label" parent="Control/BossHealth"]
layout_mode = 2
text = "BOSS HEALTH"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="Control/BossHealth"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_boss")
value = 50.0
show_percentage = false

[node name="GameOverPanel" type="Panel" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Control/GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Title" type="Label" parent="Control/GameOverPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "GAME OVER"
horizontal_alignment = 1

[node name="FinalScoreLabel" type="Label" parent="Control/GameOverPanel/VBox"]
layout_mode = 2
text = "FINAL SCORE: 0"
horizontal_alignment = 1

[node name="Hint" type="Label" parent="Control/GameOverPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Press R to Restart"
horizontal_alignment = 1

[node name="RestartBtn" type="Button" parent="Control/GameOverPanel/VBox"]
layout_mode = 2
text = "RESTART"

[node name="MenuBtn" type="Button" parent="Control/GameOverPanel/VBox"]
layout_mode = 2
text = "BACK TO MENU"

[connection signal="pressed" from="Control/GameOverPanel/VBox/RestartBtn" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Control/GameOverPanel/VBox/MenuBtn" to="." method="_on_menu_pressed"]
